--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -46,6 +46,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
             <div id="a" class="item active">
                 <span></span>
                 <div class="page" id="ccpage1">
+                    <section id="ccp1" class="text">
                         <!-- <img src="img/hotsun.jpeg"> -->
                         <p>Have you noticed that summers are hotter and winters are warmer?</p> 
                         <p>Do you ever see breaking news about an extreme weather event that threatens the places people call home?</p> 
@@ -63,6 +64,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
             <div id="b" class="item">
                 <span></span>
                 <div class="page" id="ccpage2">
+                    <section id="ccp2" class="text">
                         <!-- <img src="img/ice-sheet.jpeg"> -->
                         <p>People sometimes ask, “What’s the difference between global warming and climate change?” </p>
                         <p>Well, <span id="gw">global warming</span> refers to the increase in Earth's average surface temperature due to rising levels of greenhouse gases while <span id="cc">climate change</span> refers to the broader set of changes that go along with global warming, including changes in weather patterns, the oceans, ice and snow, and ecosystems.</p>
@@ -78,6 +80,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
             <div id="c" class="item">
                 <span></span>
                 <div class="page" id="ccpage3">
+                    <section id="ccp3" class="text">
                         <!-- <img src="img/city-cars-traffic-lights.jpeg"> -->
                         <p>According to <a href="https://climate.nasa.gov/evidence/">NASA</a>, "97 percent of climate scientists agree that climate-warming trends over the past century are very likely due to human activities."</p>
                         <p>We rely on fossil fuels to power our cars, give us light in the dark, and produce goods that we use on a daily basis, just to name a few.</p>
@@ -94,6 +97,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
             <div id="d" class="item">
                 <span></span>
                 <div class="page" id="ccpage4">
+                    <section id="ccp4" class="text">
                         <p>The effects of climate change include: </p>
                         <ul>
                             <li>Rising sea levels and temperatures</li>
@@ -118,6 +122,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
             <div id="e" class="item">
                 <span></span>
                 <div class="page" id="ccpage5">
+                    <section id="ccp5" class="text">
                         <p>People and organizations around the world have made it their mission to combat climate change:  </p>
                         <ul>
                             <li><a href="https://www3.epa.gov/climatechange/kids/faq.html" target="_blank">EPA</a> educating younger generations about climate change.</li>
