--- a/public/deforestation/index.html
+++ b/public/deforestation/index.html
@@ -57,7 +57,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
                         <div class="containervid">
                             <video src="video/trees.mp4" autoplay loop></video>
                         </div>     
-                        <section id="p1" class="text">
+                        <section id="dp1">
                             <p>Our world is home to forests that cover 31% of Earth's land surface.</p>   
                             <p>Not only are they home to 80 percent of the world's terrestrial biodiversity, but they are a major source of oxygen in the atmosphere.</p>
                             <p>300 million people call forests home and 1.6 billion depend on them to survive.</p>
@@ -76,7 +76,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
                 <div class="page" id="defpage2">
                     <!--background image-->
                     <!-- <img src="img/tent.jpg"> -->
-                    <section id="p2" class="text">
+                    <section id="dp2" >
                         <p>Forests also serve as places for recreational activity.</p>
                         <p>Do you like going camping, hiking, or biking in fresh air?</p>
                         <p>Well you are not alone. Millions of other people travel from different parts of the world to escape to the forests to de-stress.</p>
@@ -94,7 +94,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
                 <div class="page" id="defpage3">
                     <!--background image-->
                     <!-- <img src="img/deforest.jpg"> -->
-                    <section id="p3" class="text">
+                    <section id="dp3">
                         <p>Over the past 40 years, the rate of deforestation has significantly increased to satisfy the needs of the people.</p>
                         <p>Land is needed for cropland and infrastructures.</p>
                         <p>Wood is needed for fuel and paper.</p>
@@ -113,7 +113,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
                 <div class="page" id="defpage4">
                     <!--background image-->
                     <!--<img src="img/slashnburn.jpg">-->
-                    <section class="text">
+                    <section id="p4">
                         <p>When the slash and burn technique is used to clear land for agricultural reasons, massive amounts of carbon dioxide are released into the atmosphere, contributing to <a href="../climate-change/index.html">Climate Change</a>.</p>
                     </section>
                     <!-- link to climate change topic --> 
@@ -130,7 +130,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
                 <div class="page" id="defpage5">
                     <!--background image-->
                     <!--         <img src="img/koala.jpg">--> <!--(Image via @ApesFinal)--> 
-                    <section class="text">
+                    <section id="dp5">
                     <p>Animals are homeless.</p>
                     <p>They are left with limited resources and no place to go.</p>
                     <p>With no accessible food or shelter, they have the risk of becoming endangered or even <a href="../species-extinction/index.html">extinct.</a></p>
@@ -148,7 +148,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
                 <div class="page" id="defpage6">
                     <!--background image-->
                     <!--<img src="img/forestsun.jpg">-->   
-                    <section class="text">
+                    <section id="dp5">
                         <p>Our world needs forests to absorb greenhouse gases, provide resources and shelter for millions of people and animals, and give people a place for recreational activities, to name a few. </p>
                         <p>There are many organizations that want to fight deforestation and educate people about the serious repercussions associated with it.</p>
                         <ul>
