styling climate and deforestation

--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -50,7 +50,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
                         <!-- <img src="img/hotsun.jpeg"> -->
                         <p>Have you noticed that summers are hotter and winters are warmer?</p> 
                         <p>Do you ever see breaking news about an extreme weather event that threatens the places people call home?</p> 
-                        <p>Well, these events are happening because of the rapid climate change occurring on Earth. </p>
+                        <p>Well, these events are occuring because of the rapid climate change occurring on Earth. </p>
                     </section>
                    
                      <!-- From Code pen Andy Eddie -->
