edit title names

--- a/public/climate-change/index.html
+++ b/public/climate-change/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Pollution</title>
+	<title>Climate Change</title>
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="stylesheet" type="text/css" href="../css/all4topics.css">
     <link href="https://fonts.googleapis.com/css?family=Muli:700" rel="stylesheet">
