Updated Pollution and Species extinction text positions

--- a/public/pollution/index.html
+++ b/public/pollution/index.html
@@ -47,7 +47,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
             <div id="a" class="item active">
                 <span></span>
                 <div class="page" id="polpage1">
-                    <section id="p1" class="text">
+                    <section id="p1" class="pol1">
                         <!-- <img src="../pollution/img/pollution2.jpg"> -->
                         <p>Pollution is the introduction of harmful substances and/or contaminants into the environment.</p>
                         <p>Pollution, the neccessary evil that comes with developing societies.</p>
@@ -67,7 +67,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
             <div id="b" class="item">
                 <span></span>
                 <div class="page" id="polpage2">
-                    <section id="p2" class="text">
+                    <section id="p2" class="pol3">
                         <!-- <img src="../pollution/img/land-pollution.jpg"> -->
                         <p>Land Pollution</p>
                         <p>Lands and natural environments affected by the introduction of landfills being filled with both Household and Industrial waste. </p>
@@ -84,7 +84,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
             <div id="c" class="item">
                 <span></span>
                 <div class="page" id="polpage3">
-                    <section id="p3" class="text">
+                    <section id="p3" class="pol3">
                         <!-- possible video for air pollution https://www.youtube.com/watch?v=fJ0o2E4d8Ts --> 
                         <!-- <img src="../pollution/img/air-pollution.png"> -->
                         <p>Air Pollution</p>
@@ -101,7 +101,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
             <div id="d" class="item">
                 <span></span>
                 <div class="page" id="polpage4">
-                    <section class="text">
+                    <section class="pol4">
                         <!-- <img src="../pollution/img/water-pollution.jpg"> -->
                         <p>Water Pollution</p>
                         <p>Caused by harmful chemicals and substances such as sewage, pesticides and fertilizers being introduced to water.</p>
@@ -117,7 +117,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
             <div id="e" class="item">
                 <span></span>
                 <div class="page" id="polpage5">
-                    <section class="text">
+                    <section class="pol5">
                         <!-- <img src="../pollution/img/light-pollution.jpg"> -->
                         <p>Light Pollution</p>
                         <p>The excessive use of artificial light affects not just our views of the nighttime sky but can also affect us, the wildlife and climate of our planet.</p>
@@ -133,7 +133,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
             <div id="f" class="item">
                 <span></span>
                 <div class="page" id="polpage6">  
-                    <section class="text">
+                    <section class="pol6">
                         <!-- <img src="../pollution/img/pollution.jpg"> -->
                         <p>No matter what type of pollution, both humans and wildlife are constantly being affected.</p>
                         <p>To learn more about Pollution and what YOU can do to help, feel free to visit these links:</p>
