--- a/public/species-extinction/index.html
+++ b/public/species-extinction/index.html
@@ -46,7 +46,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
             <div id="a" class="item active">
                 <span></span>
                 <div class="page" id="extinctpage1">
-                    <section id="p1" class="text">
+                    <section id="p1" class="pol5">
                         <p>Earth, home to about 8.7 million species.</p>
                         <p>These 8.7 million documented species include all animals and plants alike.</p>
                         <p>They also play a major role in ensuring the resilence of the various ecosystems.</p>
@@ -63,7 +63,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
             <div id="b" class="item">
                 <span></span>
                 <div class="page" id="extinctpage2">
-                    <section id="p2" class="text">
+                    <section id="p2" class="pol2">
                         <!-- <img src="../pollution/img/land-pollution.jpg"> -->
                         <p>While extinction is considered a natural phenomenon that occurs in the background, Our planet is experiencing a huge wave of extinction in both plants and animals.</p>
                         <p>In our current state, scientist are estimating that we are now losing about 1,000 to 10,000 times the normal rate of extinction.</p>
@@ -79,7 +79,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
             <div id="c" class="item">
                 <span></span>
                 <div class="page" id="extinctpage3">
-                    <section id="p3" class="text">
+                    <section id="p3" class="pol5">
                         <p>Most of the past waves of extinctions were caused by events such as volcanic eruptions, asteroid strikes or natural climate shifts.</p>
                         <p>However, the current crisis is considered to be caused by none other than us, humans.</p>
                         <p>The introduction of developing socities created more human activies which in turn introduced more exotic species but also drove animals out of their normal habitats as well as created the <a href="../climate-change/index.html">global warming crisis.</a></p>
@@ -95,7 +95,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
             <div id="d" class="item">
                 <span></span>
                 <div class="page" id="extinctpage4">
-                    <section class="text">
+                    <section class="pol1">
                         <p>There may not be clear estimate as to how many species are in actual danger of becoming extinct.</p>
                         <p>It is very clear how big of an issue species extinction really is as well as the increasing numbers of species that are at risk of possibly disappearing forever.</p>
                     </section>
@@ -110,7 +110,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
             <div id="e" class="item">
                 <span></span>
                 <div class="page" id="extinctpage5">
-                    <section class="text">
+                    <section class="pol2">
                         <p>There are lots of people and organizations working towards discovering which species are heading towards extinction.</p>
                         <ul>
                             <li><a href="http://www.biologicaldiversity.org/">Center for Biological Diversity</a></li>
