Made edits to pollution/species extinction
darkened land pollution picture, proofread and fixed some spelling
errors

--- a/public/pollution/index.html
+++ b/public/pollution/index.html
@@ -71,7 +71,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
                         <!-- <img src="../pollution/img/land-pollution.jpg"> -->
                         <p>Land Pollution</p>
                         <p>Lands and natural environments affected by the introduction of landfills being filled with both Household and Industrial waste. </p>
-                        <p>According to the Environmental Protection Agency <a href="https://www.epa.gov/" target="_blank">(EPA)</a>, We americans produce about 4.3 pounds of waster per person per day.</p>
+                        <p>According to the Environmental Protection Agency <a href="https://www.epa.gov/" target="_blank">(EPA)</a>, We americans produce about 4.3 pounds of waste per person per day.</p>
                     </section>
 
                     <div class="arrow animated bounce">
