--- a/public/species-extinction/index.html
+++ b/public/species-extinction/index.html
@@ -82,7 +82,7 @@ http://www.jqueryscript.net/slider/Fullscreen-Vertical-Page-Carousel-Plugin-For-
                     <section id="p3" class="pol5">
                         <p>Most of the past waves of extinctions were caused by events such as volcanic eruptions, asteroid strikes or natural climate shifts.</p>
                         <p>However, the current crisis is considered to be caused by none other than us, humans.</p>
-                        <p>The introduction of developing socities created more human activies which in turn introduced more exotic species but also drove animals out of their normal habitats as well as created the <a href="../climate-change/index.html">global warming crisis.</a></p>
+                        <p>The introduction of developing societies created more human activities which in turn introduced more exotic species, drove animals out of their normal habitats, and created the <a href="../climate-change/index.html">global warming crisis.</a></p>
                     </section>
 
                     <div class="arrow animated bounce">
